fix: text in zoomed out canvas being blurry (#324)

--- a/source/3-markup/images_tables_embeds.css
+++ b/source/3-markup/images_tables_embeds.css
@@ -119,16 +119,14 @@ body:not(.no-image-alttext-caption) .image-embed::after {
 /* ───────────────────────────────────────────────── */
 /** Embeds
 ──────────────────────────────────────────────────── */
+/* INFO do not set border-radius for embeds, since it results in blurry font,
+* see #324 */ 
 
 .markdown-embed .embed-title {
 	font-family: var(--font-heading-theme);
 	font-size: var(--h5-size);
 	letter-spacing: var(--heading-letter-spacing);
 	padding-bottom: 0;
-}
-
-.markdown-embed {
-	border-radius: var(--radius-s);
 }
 
 /* fix placement of link icon */
